# physical_modeling

./: Answers.txt  CMakeLists.txt  Planets.sln  main.cpp  planet.cpp  planet.hpp  tests.cpp  Ответы на вопросы.docx
Planets/: Planet.cpp  Planet.h  Planets.cpp  Planets.vcxproj  Planets.vcxproj.filters
Planets/x64/Debug/Planets.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Planets.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Planets.ilk
