cmake_minimum_required(VERSION 3.14)
set(PROJECT_NAME "Planets")
set(TESTING_NAME "Testing")
project(${PROJECT_NAME})
set(SFML_DIR "${CMAKE_CURRENT_LIST_DIR}/SFML/lib/cmake/SFML")
set(TGUI_DIR "${CMAKE_CURRENT_LIST_DIR}/TGUI/lib/cmake/TGUI")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe")
file(GLOB ALL_REQUIRED_DLL "${CMAKE_CURRENT_LIST_DIR}/dll/*.dll")
file(COPY ${ALL_REQUIRED_DLL} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe)
set(CMAKE_CXX_STANDARD 17)
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe/resources")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe/resources/planets")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe/resources/interface")
file(GLOB ALL_PLANETS "${CMAKE_CURRENT_LIST_DIR}/resources/planets/*.png")
file(COPY ${ALL_PLANETS} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe/resources/planets")
file(GLOB ALL_INTERFACE "${CMAKE_CURRENT_LIST_DIR}/resources/interface/*.png")
file(COPY ${ALL_INTERFACE} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/положить_содержимое_рядом_с_exe/resources/interface")
add_executable(${TESTING_NAME} planet.cpp planet.hpp tests.cpp)
add_executable(${PROJECT_NAME} main.cpp planet.cpp planet.hpp)
find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
find_package(TGUI 0.8 REQUIRED)
target_link_libraries(${PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system tgui)
target_link_libraries(${TESTING_NAME} sfml-audio sfml-graphics sfml-window sfml-system tgui)
enable_testing()
add_test(${TESTING_NAME} ${TESTING_NAME})

